Changed the name

--- a/assignment0.html
+++ b/assignment0.html
@@ -19,7 +19,7 @@
 				<li>I watched over kids</li>
 				<li>I created schedules for classes</li>
 			</ul> 
-			<li>I volunteered at local NYPL</li>
+			<li>Volunteered at local NYPL</li>
 			<ul> 
 				<li>I reshelved books</li>
 				<li>I helped pick up books off the floor</li>
